# wimp_s

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  credits.txt  readme.txt  ships.json  sources.txt
dependencies/JoFileLib/: CMakeLists.txt
dependencies/JoFileLib/include/: filewrapper.hpp  poolallocator.hpp
dependencies/JoFileLib/lib/Release/: jofile.lib
dependencies/JoFileLib/src/: imagewrapper_png.cpp  imagewrapper_tga.cpp
dependencies/SDL/: SDL2Config.cmake
design/: classes.graphml
models/: _spaceship.fbx  advanced_ship.fbx  advanced_ship.wim  advanced_ship2bm.wii  advanced_shipbm.wii  asteroid.fbx  asteroid.wim  asteroid02.fbx  asteroid02.wim  asteroid02bm.wii  asteroidbm.wii  battleship.fbx  battleship.wim  battleshipbm.wii  crate.fbx  crate.wim  cratebm.wii  dark_fighter.fbx  dark_fighter.wim  dark_fighterbm.wii  dark_fighterbm.wim  default_ship.fbx  default_ship.wim  default_shipbm.wii  default_shipbm.wim  drone.fbx  drone.wim  dronebm.wii  missile.fbx  missile.wim  planet.fbx  planet.wim  small_fighter.fbx  small_fighter.wim  small_fighterbm.wii  spaceship.fbx  spaceship.wim  spaceshipbm.wii  spacestation.fbx  spacestation.wim  (+3 more)
shader/: backgroundstar.gs  cameraubo.glsl  darken.ps  dominant_light.ps  font.ps  globalubo.glsl  light.gs  light.ps  light.vs  lines.gs  lines.ps  lines.vs  mesh.ps  mesh.vs  output.ps  screentex.gs  screentex.ps  screentex.vs  shield.ps  shield.vs  sun.gs  sun.ps  sun.vs
shader/particle/: blob.ps  ray.ps  texquad.gs  texquad.ps
shader/postprocessing/: blackhole.gs  blackhole.ps  blackhole.vs  brightness.ps
src/: demoparams.hpp  game.cpp  game.hpp  main.cpp  predeclarations.hpp
src/control/: camera.cpp  camera.hpp  controller.cpp  controller.hpp  input.cpp  input.hpp  kamikazecontroller.cpp  kamikazecontroller.hpp  playercontroller.cpp  playercontroller.hpp  turtlecontroller.cpp  turtlecontroller.hpp  waspcontroller.cpp  waspcontroller.hpp
src/gameplay/: content.cpp  content.hpp  scenegraph.cpp  scenegraph.hpp
src/gameplay/core/: actor.cpp  actor.hpp  component.hpp  model.cpp  model.hpp  singlecomponentactor.hpp
src/gameplay/elements/: audiocomponent.cpp  audiocomponent.hpp  blackhole.cpp  blackhole.hpp  collisioncomponent.cpp  collisioncomponent.hpp  component.hpp  crate.cpp  crate.hpp  enemyship.cpp  enemyship.hpp  explosion.cpp  explosion.hpp  factorycomponent.hpp  grid.cpp  grid.hpp  lifetimecomponent.hpp  light.cpp  light.hpp  particlesystemcomponent.cpp  particlesystemcomponent.hpp  shieldcomponent.cpp  shieldcomponent.hpp  ship.cpp  ship.hpp  singlesound.hpp  socketcomponent.cpp  socketcomponent.hpp  sun.cpp  sun.hpp  triggervolumecomponent.hpp
src/gameplay/elements/shipsystems/: inventory.cpp  inventory.hpp  item.cpp  item.hpp  projectile.cpp  projectile.hpp  shield.cpp  shield.hpp  specialmove.cpp  specialmove.hpp  weapon.cpp  weapon.hpp
src/gameplay/events/: conditions.cpp  conditions.hpp  event.hpp  helpers.cpp  helpers.hpp
src/gameplay/events/01_intro/: act01.cpp  act01.hpp
src/gameplay/events/02_delivery/: act02.cpp  act02.hpp
src/gameplay/events/03_final/: act03.cpp  act03.hpp
src/gamestates/: basicmenustate.hpp  creditsstate.cpp  creditsstate.hpp  endstate.cpp  endstate.hpp  gamestate.hpp  inventorystate.cpp  inventorystate.hpp  mainmenustate.cpp  mainmenustate.hpp  mainstate.cpp  mainstate.hpp  pausestate.cpp  pausestate.hpp  settingsstate.cpp  settingsstate.hpp  transitionstate.cpp  transitionstate.hpp
src/gamestates/huds/: creditshud.cpp  creditshud.hpp  examplehud.cpp  examplehud.hpp  inventoryhud.cpp  inventoryhud.hpp  mainhud.cpp  mainhud.hpp  mainmenuhud.cpp  mainmenuhud.hpp  pausehud.cpp  pausehud.hpp  settingshud.cpp  settingshud.hpp  transitionhud.cpp  transitionhud.hpp
src/generators/: asteroidfield.cpp  asteroidfield.hpp  itemgen.cpp  itemgen.hpp  random.cpp  random.hpp  shieldgen.cpp  shieldgen.hpp  weapongen.cpp  weapongen.hpp
src/graphic/: mesh.cpp  mesh.hpp  resources.cpp  resources.hpp
src/graphic/core/: device.cpp  device.hpp  effect.cpp  effect.hpp  framebuffer.cpp  framebuffer.hpp  opengl.cpp  opengl.hpp  samplerstate.cpp  texture.cpp  uniformbuffer.cpp  uniformbuffer.hpp  vertexbuffer.cpp  vertexbuffer.hpp
src/graphic/effects/: blackholerenderer.cpp  blackholerenderer.hpp  lightsystem.cpp  lightsystem.hpp  linerenderer.cpp  linerenderer.hpp  particlesystem.cpp  particlesystem.hpp  starbackground.cpp  starbackground.hpp  sunrenderer.cpp  sunrenderer.hpp
src/graphic/interface/: customelements.cpp  customelements.hpp  font.cpp  font.hpp  hud.cpp  hud.hpp  hudelements.cpp  hudelements.hpp  pixelcoords.hpp  screenoverlay.cpp  screenoverlay.hpp
src/math/: extensions.hpp  transformation.cpp  transformation.hpp
src/utils/: assert.cpp  audiobackend.cpp  audiobackend.hpp  color.hpp  fixedarray.hpp  logger.cpp  logger.hpp  meshloader.cpp  meshloader.hpp  pathutils.cpp  pathutils.hpp  stdextensions.hpp  stringutils.hpp
texture/: Iosevka_Medium.sraw  defaultcontainer.sraw
tools/meshprocessor/: CMakeLists.txt  readme.txt
tools/meshprocessor/src/: convexhullgen.cpp  convexhullgen.hpp  main.cpp  mesh.cpp  mesh.hpp  pathutils.cpp  vec.hpp
tools/texturecontainer/: CMakeLists.txt  MaxRectsBinPack.cpp  MaxRectsBinPack.hpp  Rect.cpp  combined.sraw  main.cpp  run_copy.bat
